# FastAPI-The-Complete-Course

docs/: qa.md  terminology.md
docs/01_installation/: alembic.md  installation.md  jwt.md  poetry.md
myproject/: books.py  books2.py  pyproject.toml  testdb.db
myproject/TodoApp/: alembic.ini  cli.py  database.py  main-c09.py  main.py  models.py  project_structure.txt  todo_cli.ipynb  todos-c09.db  todos.db  todosapp-c11.db
myproject/TodoApp/alembic/: env.py
myproject/TodoApp/alembic/versions/: 6fa63925ef43_create_phone_number_for_user_column.py
myproject/TodoApp/routers/: admin.py  auth.py  todos-c10.py  todos.py  users.py
myproject/TodoApp/templates/: home.html  layout.html  login.html  register.html  todo.html
myproject/TodoApp/test/: test_admin.py  test_auth.py  test_example.py  test_todos.py  test_users.py  utils.py
